--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  overflow: hidden;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 25px;
+  color: #fff;
+}
+.app{
+  width: 500px;
+  height: 300px;
+  background-color: rgb(133, 133, 248);
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.question-section{
+  width: 50%;
+  height: 100%;
+  /* border: 2px solid red; */
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.question-count{
+  position: absolute;
+  /* top: 0px; */
+  /* left: 5px; */
+  /* border: 2px solid blueviolet; */
+}
+
+.question-text{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  /* top: 0px; */
+}
+
+.answer-section{
+  width: 50%;
+  height: 100%;
+  /* border: 2px solid #fff; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+button{
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px auto;
+  width: 90%;
+  background-color: rgb(76, 76, 126);
+  border: 0;
+  color: #fff;
+}
+
+button:active{
+  transform: scale(0.98);
+}
+
+.score-section{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
